@@ -13,6 +13,13 @@ conf.autoRefresh = conf.ReadInt('autorefresh', True)
 conf.embedPanel = conf.ReadInt('embedPanel', True)
 conf.showTools = conf.ReadInt('showTools', True)
 conf.sashPos = conf.ReadInt('sashPos', 200)
+if not conf.embedPanel:
+    conf.panelX = conf.ReadInt('panelX', -1)
+    conf.panelY = conf.ReadInt('panelY', -1)
+else:
+    conf.panelX = conf.panelY = -1
+conf.panelWidth = conf.ReadInt('panelWidth', 200)
+conf.panelHeight = conf.ReadInt('panelHeight', 200)
 
 g.fileHistory = wx.FileHistory()
 g.fileHistory.Load(conf)
@@ -21,5 +28,7 @@ plugin.load_plugins('plugins')
 
 frame = view.Frame()
 Presenter.init()
+if len(sys.argv) > 1:
+    Presenter.loadXML(sys.argv[1])
 frame.Show()
 app.MainLoop()
